--- a/index.html
+++ b/index.html
@@ -89,117 +89,9 @@
             </div>
         </div>
 
-        <div class="about-wrapper">
-            <div class="border-wrapper"></div>
-            <div class="about">
-                <div class="section-header-container">
-                    <h2 class="section-header">ABOUT</h2>
-                </div>
-                <div class="about-desc">
-                    <p>
-                        WILFREDO HERRERA originates from the vibrant island of Puerto Rico from Cuban immigrants. As a
-                        person who enjoys learning new technologies, Fredo has delved into different mediums (like
-                        filmmaking, web development, and visual arts), exploring the landscape for new skills to master.
-                        He went to university in the U.S. to study his favorite subject- movies, and got a Bachelor's
-                        Degree in Film.
-                        <br> <span class="arrow-down">&#9759;</span>
-                        <br>
-                        Fredo works in productions in
-                        various roles, including as cinematographer for the short films <a class="link"
-                            href="https://youtu.be/VAabx5ttHa4" target=”_blank” rel="noopener noreferrer">DYNAMITE
-                            ABRAHAM: A DOCUMENTARY</a>, shot on Super 8mm and the upcoming <span
-                            style="text-decoration: underline;">SEXY BITCH</span>, shot digitally in N.Y.; as
-                        well
-                        as editor and director of the music video for the <a class="link"
-                            href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">single
-                            THUNDER</a> by the Boston band Pyramid Thieves. He also has experience as a gaffer and sound
-                        person.
-
-                        <br>
-                        <br>
-
-                        Fredo started exploring analog video mixers, the world wide web, and visual programming
-                        languages thanks to an intro to video signals class offered by the collective PhaseSpace (now
-                        Wavefield) based out of Bushwick, N.Y. He aims to create visual pieces that stimulate the brain
-                        in conjuction with curated music.
-                        <br>
-                        <br>
-
-                        Fredo enjoys vinyl feel and discovering music. He creates mixes under the pseudonym <a
-                            class="link" href="https://www.mixcloud.com/fr_radio/"
-                            target="_blank"><em>fredonaut</em></a> -
-
-                        <br>
-                        <br>
-
-                        <iframe width="100%" height="60"
-                            src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fwarning-from-space-%E5%AE%87%E5%AE%99%E4%BA%BA%E6%9D%B1%E4%BA%AC%E3%81%AB%E7%8F%BE%E3%82%8F%E3%82%8B%2F"
-                            frameborder="0"></iframe>
-                        <iframe width="100%" height="60"
-                            src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F"
-                            frameborder="0"></iframe>
-
-                        <br>
-                        <br>
-
-                        Fredo currently resides in New York, focusing on producing short films, digital/analog
-                        video manipulation, generative art, and web development. He welcomes all artistic
-                        collaborations. &#9787;
-
-                        <br>
-                        <br>
-                        CV can be found <a href="assets/resume/fredo-resume-v042424.pdf" target="_blank" class="link"
-                            style="color: red;">here</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="social-container">
-            <div class="border-wrapper-2"></div>
-            <div class="social-header">
-                <section class="title-banner">
-                    <div class="title">
-                        <h1>contacting fredito
-                        </h1>
-                    </div>
-                </section>
-                <section class="socials-wrapper">
-                    <div class="socials">
-                        <div>
-                            <img src="assets/images/icons/email-96-white.png" alt="" width="19" height="19">
-                            <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">e-mail</a>
-                        </div>
-                        <div>
-                            <img src="assets/images/icons/insta-96-white.png" alt="" width="19" height="19">
-                            <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">instagram</a>
-                        </div>
-                        <div>
-                            <img src="assets/images/icons/youtube-96-white.png" alt="" width="19" height="19">
-                            <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank"
-                                class="link">youtube</a>
-                        </div>
-                        <div>
-                            <img src="assets/images/icons/clapperboard-96.png" alt="" width="19" height="19">
-                            <a href="https://letterboxd.com/spookyfr/" target="_blank" class="link">letterboxd</a>
-                        </div>
-                        <div>
-                            <img src="assets/images/icons/radio-96-white.png" alt="" width="19" height="19">
-                            <a href="https://www.mixcloud.com/fr_radio/" target="_blank" class="link">radio
-                                programme</a>
-                        </div>
-                    </div>
-
-                </section>
-            </div>
-        </div>
-
         <div class="vis-wrapper">
             <div class="border-wrapper-3"></div>
             <div class="visuals">
-                <div>
-                    <h2 class="section-header">VISUALS</h2>
-                </div>
                 <section class="prj-grid">
                     <section class="prj-item">
                         <section class="prj-img">
@@ -471,7 +363,111 @@
             </div>
         </div>
 
-        <div class="interests-container">
+        <div class="social-container">
+            <div class="border-wrapper-2"></div>
+            <div class="social-header">
+                <section class="title-banner">
+                    <div class="title">
+                        <h1>contacting fredito
+                        </h1>
+                    </div>
+                </section>
+                <section class="socials-wrapper">
+                    <div class="socials">
+                        <div>
+                            <img src="assets/images/icons/email-96-white.png" alt="" width="19" height="19">
+                            <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">e-mail</a>
+                        </div>
+                        <div>
+                            <img src="assets/images/icons/insta-96-white.png" alt="" width="19" height="19">
+                            <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">instagram</a>
+                        </div>
+                        <div>
+                            <img src="assets/images/icons/youtube-96-white.png" alt="" width="19" height="19">
+                            <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank"
+                                class="link">youtube</a>
+                        </div>
+                        <div>
+                            <img src="assets/images/icons/clapperboard-96.png" alt="" width="19" height="19">
+                            <a href="https://letterboxd.com/spookyfr/" target="_blank" class="link">letterboxd</a>
+                        </div>
+                        <div>
+                            <img src="assets/images/icons/radio-96-white.png" alt="" width="19" height="19">
+                            <a href="https://www.mixcloud.com/fr_radio/" target="_blank" class="link">radio
+                                programme</a>
+                        </div>
+                    </div>
+
+                </section>
+            </div>
+        </div>
+
+        <div></div>
+
+        <div class="about-wrapper">
+            <div class="border-wrapper"></div>
+            <div class="about">
+                <div class="about-desc">
+                    <p>
+                        WILFREDO HERRERA originates from the vibrant island of Puerto Rico from Cuban immigrants. As a
+                        person who enjoys learning new technologies, Fredo has delved into different mediums (like
+                        filmmaking, web development, and visual arts), exploring the landscape for new skills to master.
+                        He went to university in the U.S. to study his favorite subject- movies, and got a Bachelor's
+                        Degree in Film.
+                        <br> <span class="arrow-down">&#9759;</span>
+                        <br>
+                        Fredo works in productions in
+                        various roles, including as cinematographer for the short films <a class="link"
+                            href="https://youtu.be/VAabx5ttHa4" target=”_blank” rel="noopener noreferrer">DYNAMITE
+                            ABRAHAM: A DOCUMENTARY</a>, shot on Super 8mm and the upcoming <span
+                            style="text-decoration: underline;">SEXY BITCH</span>, shot digitally in N.Y.; as
+                        well
+                        as editor and director of the music video for the <a class="link"
+                            href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">single
+                            THUNDER</a> by the Boston band Pyramid Thieves. He also has experience as a gaffer and sound
+                        person.
+
+                        <br>
+                        <br>
+
+                        Fredo started exploring analog video mixers, the world wide web, and visual programming
+                        languages thanks to an intro to video signals class offered by the collective PhaseSpace (now
+                        Wavefield) based out of Bushwick, N.Y. He aims to create visual pieces that stimulate the brain
+                        in conjuction with curated music.
+                        <br>
+                        <br>
+
+                        Fredo enjoys vinyl feel and discovering music. He creates mixes under the pseudonym <a
+                            class="link" href="https://www.mixcloud.com/fr_radio/"
+                            target="_blank"><em>fredonaut</em></a> -
+
+                        <br>
+                        <br>
+
+                        <iframe width="100%" height="60"
+                            src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fwarning-from-space-%E5%AE%87%E5%AE%99%E4%BA%BA%E6%9D%B1%E4%BA%AC%E3%81%AB%E7%8F%BE%E3%82%8F%E3%82%8B%2F"
+                            frameborder="0"></iframe>
+                        <iframe width="100%" height="60"
+                            src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F"
+                            frameborder="0"></iframe>
+
+                        <br>
+                        <br>
+
+                        Fredo currently resides in New York, focusing on producing short films, digital/analog
+                        video manipulation, generative art, and web development. He welcomes all artistic
+                        collaborations. &#9787;
+
+                        <br>
+                        <br>
+                        CV can be found <a href="assets/resume/fredo-resume-v042424.pdf" target="_blank" class="link"
+                            style="color: red;">here</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="interests-container">
             <div class="border-wrapper-4"></div>
             <div class="interests-header">
                 <section class="title-banner">
@@ -503,7 +499,7 @@
 
                 </section>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <div id="images" class="hidden" style="margin-top: 30px;">
