--- a/index.html
+++ b/index.html
@@ -517,13 +517,13 @@
             <ul class="mobile-menu">
                 <li><a href="#" onclick="toggleVis()">visualizers</a></li>
                 <li><a href="#" onclick="toggleAbout()">about</a></li>
-              </ul>
+            </ul>
         </div>
     </div>
 
     <div id="images" class="hidden" style="margin-top: 30px;">
         <div class="go-back">
-            <a href="#" onclick="goBack()">
+            <a href="#" onclick="toggleImgs()">
                 <p>go back</p>
             </a>
         </div>
