--- a/index.html
+++ b/index.html
@@ -471,11 +471,12 @@
                         <br>
                         <br>
                         CV can be found <a href="assets/resume/fredo-resume-v042424.pdf" target="_blank" class="link"
-                            style="color: red;">here</a>
+                            style="color: lightblue;">here</a>
                     </p>
                 </div>
             </div>
         </div>
+
 
         <!-- <div class="interests-container">
             <div class="border-wrapper-4"></div>
@@ -512,10 +513,70 @@
         </div> -->
     </div>
 
+    <div id="projectContainer" class="prjs-wrapper">
+        <div class="go-to">
+            <a href="#" onclick="toggleVis()">
+                <p>go back</p>
+            </a>
+        </div>
+        <div class="border-wrapper-5"></div>
+        <div class="projects-container">
+            <section class="prj-grid-b">
+
+                <section class="prj-item-b">
+                    <section class="prj-img-b">
+                        <iframe class="video"
+                            src="https://www.youtube-nocookie.com/embed/wNJihWmU-iE?si=PJdj1CjOzQC1Td92"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </section>
+
+                    <section class="prj-info-b">
+                        <h4 class="prj-title-b">Thunder by Pyramid Thieves- music video</h4>
+                        <p class="date-length-b">2O19</p>
+                        <p class="date-length-b">&#9758; MY ROLE: Director, Editor, Gaffer, VFX</p>
+                    </section>
+                </section>
+
+                <section class="prj-item-b">
+                    <section class="prj-img-b">
+                        <iframe class="video"
+                            src="https://www.youtube-nocookie.com/embed/VAabx5ttHa4?si=yMOjr-QW20M1Ol0Q"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </section>
+
+                    <section class="prj-info-b">
+                        <h4 class="prj-title-b">Dynamite Abraham: A Documentary</h4>
+                        <p class="date-length-b">2O15</p>
+                        <p class="date-length-b">&#9758; MY ROLE: Cinematographer</p>
+                    </section>
+                </section>
+
+                <section class="prj-item-b">
+                    <section class="prj-img-b">
+                        <iframe class="video" src="https://player.vimeo.com/video/95069208?h=24a0d99a29&byline=0" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                    </section>
+
+                    <section class="prj-info-b">
+                        <h4 class="prj-title-b">Sad Sappy Sucker</h4>
+                        <p class="date-length-b">2O14</p>
+
+                        <p class="date-length-b">&#9758; MY ROLE: Cinematographer, Producer</p>
+                    </section>
+                </section>
+
+            </section>
+        </div>
+    </div>
+
     <div id="mobileMenu" class="mobile-menu-wrapper">
         <div>
             <ul class="mobile-menu">
                 <li><a href="#" onclick="toggleVis()">visualizers</a></li>
+                <!-- <li><a href="#" onclick="toggleProj()">projects</a></li> -->
                 <li><a href="#" onclick="toggleAbout()">about</a></li>
             </ul>
         </div>
