--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
                         <br>
                         <br>
-                        CV can be found <a href="assets/resume/fredo-resume-v042424.pdf" target="_blank" class="link"
+                        CV can be found <a href="assets/resume/fredo_resume-v051624.pdf" target="_blank" class="link"
                             style="color: lightblue;">here</a>
                     </p>
                 </div>
@@ -557,7 +557,8 @@
 
                 <section class="prj-item-b">
                     <section class="prj-img-b">
-                        <iframe class="video" src="https://player.vimeo.com/video/95069208?h=24a0d99a29&byline=0" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="video" src="https://player.vimeo.com/video/95069208?h=24a0d99a29&byline=0"
+                            frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                     </section>
 
                     <section class="prj-info-b">
